--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -689,8 +689,11 @@ body.wp-admin .nu_posts-grid .grid-item a {
   background-color: var(--wp--preset--color--white-2);
 }
 .nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content {
-  padding: 16px;
+  padding: 16px 0;
   padding-bottom: 32px;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content > :not(figure) {
+  padding: 0 16px;
 }
 .nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label {
   text-transform: uppercase;
