--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -585,26 +585,13 @@ body.wp-admin .nu_posts-grid .grid-item a {
   border: none 0;
 }
 .nu_posts-grid .grid-item > a.contains-clickable-area .post-title span {
-  position: relative;
-  padding-bottom: 2px;
-}
-.nu_posts-grid .grid-item > a.contains-clickable-area .post-title span:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  position: absolute;
-  border-bottom: 2px solid currentColor;
-  bottom: -2px;
-  transition: all 0.1s ease-in-out;
-  left: 0;
-  right: auto;
+  border-bottom: 0px solid currentColor;
 }
 .nu_posts-grid .grid-item > a.contains-clickable-area:hover, .nu_posts-grid .grid-item > a.contains-clickable-area:focus {
   border: none 0;
 }
-.nu_posts-grid .grid-item > a.contains-clickable-area:hover .post-title span:before, .nu_posts-grid .grid-item > a.contains-clickable-area:focus .post-title span:before {
-  width: 100%;
+.nu_posts-grid .grid-item > a.contains-clickable-area:hover .post-title span, .nu_posts-grid .grid-item > a.contains-clickable-area:focus .post-title span {
+  border-bottom: 1px solid currentColor;
 }
 .nu_posts-grid .grid-item > a.contains-clickable-area:hover img, .nu_posts-grid .grid-item > a.contains-clickable-area:focus img {
   transform: scale(1.2);
