--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/landing-pages/_landing-page-has-sidebar.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/landing-pages/_landing-page-has-sidebar.scss
@@ -15,11 +15,24 @@
 		}
 	}
 
+
+	// 
+	// ? styles only above mobile-nav breakpoint
+	// 
 	@include media(">medium") {
+		.wp-block-columns .wp-block-column:first-child {
+			flex-basis: 280px;
+		}
 		.is-the-sidebar-navicon {
 			display: none;
 		}
 	}
+
+
+
+	// 
+	// ? styles only equal to or below mobile-nav breakpoint
+	// 
 	@include media("<=medium") {
 		//
 		// ? break the sidebar layout columns early; when the mobile nav comes in, allowing more grid space
