preparing to shuffle theme around and approach an MVP
lots of changes heads up!

--- a/wp-content/themes/nu-start-child/style.css
+++ b/wp-content/themes/nu-start-child/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:     NU Start - Child Starter
+Theme Name:     NU Start - Tabula Rasa
 Theme URI:      
-Description:    NU-Start Child Theme Starter Kit
+Description:    NU-Start Child Theme Starter Kit, Tabula Rasa, is our clean deployable starting point.
 Author:         Me
 Author URI:     
 Template:       nu-start
