--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -500,6 +500,9 @@ body.wp-admin .nu_posts-grid .grid-item a {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+.nu_posts-grid .grid-item figure {
+  max-height: 320px;
+}
 .nu_posts-grid .grid-item {
   background-color: white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
@@ -591,13 +594,10 @@ body.wp-admin .nu_posts-grid .grid-item a {
   border: none 0;
 }
 .nu_posts-grid .grid-item > a.contains-clickable-area:hover .post-title span, .nu_posts-grid .grid-item > a.contains-clickable-area:focus .post-title span {
-  border-bottom: 1px solid currentColor;
+  border-bottom: 2px solid currentColor;
 }
 .nu_posts-grid .grid-item > a.contains-clickable-area:hover img, .nu_posts-grid .grid-item > a.contains-clickable-area:focus img {
   transform: scale(1.2);
-}
-.nu_posts-grid .grid-item > a.contains-clickable-area:hover .grid-item-content, .nu_posts-grid .grid-item > a.contains-clickable-area:focus .grid-item-content {
-  background-color: var(--wp--preset--color--white-2);
 }
 .nu_posts-grid .grid-item > * {
   margin-left: 0;
@@ -637,65 +637,9 @@ body.wp-admin .nu_posts-grid .grid-item a {
 }
 
 /* 
-
-	i.e.,
-
-	.has-24-32-font-size
-
+*			NU EVENTS TEASER STYLES
+* 		UNDER DEVELOPMENT
 */
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area {
-  padding: 0;
-  position: relative;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:after {
-  content: "\e5cc";
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  line-height: inherit;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  vertical-align: middle;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-feature-settings: "liga";
-  -moz-font-feature-settings: "liga";
-  -moz-osx-font-smoothing: grayscale;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:after {
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  line-height: 1;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:hover, .nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:active {
-  background-color: var(--wp--preset--color--white-2);
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content {
-  padding: 16px 0;
-  padding-bottom: 32px;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content > :not(figure) {
-  padding: 0 16px;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 8px 0;
-}
-.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label:before {
-  content: "";
-  display: inline-block;
-  border: 1px solid var(--wp--preset--color--black-1);
-  border-radius: 50%;
-  width: 8px;
-  height: 8px;
-  margin: 0 16px 0 0;
-}
 .nu_posts-grid .nu__grid .grid-item.nu_events .nu__datetime {
   display: flex;
   flex-flow: column nowrap;
@@ -766,24 +710,60 @@ body.wp-admin .nu_posts-grid .grid-item a {
   margin-right: 8px;
   line-height: 1;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a {
-  border: none 0;
-  display: flex;
+.nu_posts-grid .nu__grid .grid-item.nu_events p.post-title {
+  margin: 16px 0 8px 0;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a .post-title {
-  margin: 16px 0;
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area {
+  padding: 0;
+  position: relative;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a .post-title span {
-  border-bottom: 2px solid transparent;
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:after {
+  content: "\e5cc";
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  line-height: inherit;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga";
+  -moz-osx-font-smoothing: grayscale;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a:hover, .nu_posts-grid .nu__grid .grid-item.nu_events > a:focus {
-  border: none 0;
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:after {
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  line-height: 1;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a:hover .post-title span, .nu_posts-grid .nu__grid .grid-item.nu_events > a:focus .post-title span {
-  border-bottom: 2px solid currentColor;
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content {
+  padding: 0;
 }
-.nu_posts-grid .nu__grid .grid-item.nu_events > a:hover img, .nu_posts-grid .nu__grid .grid-item.nu_events > a:focus img {
-  transform: scale(1.2);
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area .grid-item-content > :not(figure) {
+  padding: 0 16px;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:hover:after, .nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area:focus:after {
+  color: var(--wp--preset--color--red-3);
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 8px 0;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label:before {
+  content: "";
+  display: inline-block;
+  border: 1px solid var(--wp--preset--color--black-1);
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  margin: 0 16px 0 0;
 }
 
 /* 
