--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
@@ -20,7 +20,7 @@ footer {
 			svg {
 				display: block;
 				min-height: 100%;
-                max-width: 220px;
+        // max-width: 220px;
 			}
         }
         &.logo--text {
