--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid.scss
@@ -1,3 +1,330 @@
 /* 
 	PostsGrid Block Stylesheet
 */
+@import "../library/";
+.nu_posts-grid.nu-acf-block {
+	// ? basics for aspect ratio for all items here
+	@mixin nu__grid_item_cover_ratios {
+		figure {
+			overflow: hidden;
+			position: relative;
+			margin: 0;
+		}
+		img {
+			width: 100%;
+			min-height: 100%;
+		}
+
+		&.has-very-wide-cover-image,
+		&.has-wide-cover-image,
+		&.has-tall-cover-image,
+		&.has-very-tall-cover-image,
+		&.has-square-cover-image {
+			img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				transform: scale(1);
+			}
+		}
+		&.has-square-cover-image {
+			figure {
+				@include aspect-ratio(1, 1);
+			}
+		}
+		&.has-wide-cover-image {
+			figure {
+				@include aspect-ratio(4, 3);
+			}
+		}
+		&.has-very-wide-cover-image {
+			figure {
+				@include aspect-ratio(16, 9);
+			}
+		}
+		&.has-tall-cover-image {
+			figure {
+				@include aspect-ratio(3, 4);
+			}
+		}
+		&.has-very-tall-cover-image {
+			figure {
+				@include aspect-ratio(9, 16);
+			}
+		}
+	}
+	// ? basics for horz/vert orientation here
+	@mixin nu__grid_item_orientation {
+		&.has-layout-horizontal {
+			> .contains-clickable-area,
+			& {
+				@media screen and (min-width: 781px) {
+					flex-flow: row nowrap;
+					> figure {
+						flex: 1 0 300px;
+						max-width: 50%;
+					}
+					> .grid-item-content {
+						flex: 1 1 auto;
+					}
+				}
+			}
+		}
+	}
+
+	margin: $margin_2x 0 $base-margin 0;
+
+	figure {
+		max-height: 320px; // ! need to restrict this to cols-1 or something, maybe horz layout?
+	}
+
+	// ? handle adjusting base styles of contained elements
+	a.contains-clickable-area:after,
+	img {
+		@extend %transition;
+	}
+
+	ul {
+		list-style: none;
+		list-style-type: none;
+		padding: 0;
+	}
+
+	// ?
+
+	.nu__grid {
+		@include nu__responsive_grid_layout();
+	}
+	.grid-item {
+		@include nu__grid_item_cover_ratios();
+		@include nu__grid_item_orientation();
+		background-color: var(--wp--preset--color--white-1);
+	}
+
+	a.contains-clickable-area {
+		display: block;
+		text-decoration: none;
+		color: currentColor;
+		border: none;
+		//
+		.post-title span {
+			border-bottom: 0px solid currentColor;
+		}
+		&:hover,
+		&:focus {
+			border: none;
+			.post-title span {
+				border-bottom: 2px solid currentColor;
+			}
+			img {
+				transform: scale(1.2);
+			}
+		}
+	}
+}
+
+// ? be sure to disable click-events on teasers in the CMS
+body.wp-admin {
+	.nu_posts-grid {
+		.grid-item a {
+			pointer-events: none;
+		}
+	}
+}
+
+// !
+// !
+// !
+// !
+
+// ? hot potato drop in of all the previous teasers
+
+.nu_posts-grid .nu__grid .grid-item.page {
+	> a {
+		border: none 0;
+		.post-title span {
+			border-bottom: 2px solid transparent;
+			@extend %transition;
+		}
+		figure {
+			overflow: hidden;
+			img {
+				transform: scale(1);
+				@extend %transition;
+			}
+		}
+		&:hover,
+		&:focus,
+		&:active {
+			border: none 0;
+			.post-title span {
+				border-bottom: 2px solid currentColor;
+			}
+
+			img {
+				transform: scale(1.2);
+			}
+		}
+	}
+}
+
+.nu_posts-grid
+	.nu_profiles.grid-item.has-layout-horizontal
+	> .contains-clickable-area,
+.nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal {
+	@include media(">=medium") {
+		> figure {
+			flex: 1 1 50%;
+			max-width: 50%;
+			max-height: 320px;
+			order: 2;
+		}
+		.grid-item-content {
+			flex: 1 1 50%;
+			max-width: 50%;
+			padding: $margin_2x !important;
+			justify-content: center;
+		}
+	}
+}
+
+.nu_posts-grid
+	.nu_projects.grid-item.has-layout-horizontal
+	> .contains-clickable-area,
+.nu_posts-grid .nu_projects.grid-item.has-layout-horizontal {
+	@include media(">=medium") {
+		> figure {
+			flex: 1 0 66%;
+			max-width: none;
+			max-height: 320px;
+		}
+		.grid-item-content {
+			justify-content: center;
+		}
+	}
+}
+
+/* 
+
+*/
+
+.nu_posts-grid .nu__grid .grid-item.nu_news {
+	.is-the-publication-date {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+	}
+
+	// ? the date-time block is not loading this properly idk why
+	// todo: fix this so its DRY
+	.nu__datetime {
+		@include nu__date_time_block_styles();
+	}
+
+	// ? handle interaction with zooming image and underlining title
+	> a.contains-clickable-area {
+		background-color: var(--wp--preset--color--white-2);
+		border: none 0;
+		display: flex;
+		.post-title {
+			margin-top: $base-margin;
+			span {
+				border-bottom: 2px solid transparent;
+			}
+		}
+		&:hover,
+		&:focus {
+			border: none 0;
+			.post-title span {
+				border-bottom: 2px solid currentColor;
+			}
+			img {
+				transform: scale(1.2);
+			}
+		}
+	}
+
+	.grid-item-content {
+		padding: $base-margin;
+		padding: $margin_2x;
+		justify-content: center;
+
+		.is-the-publication-date {
+			justify-content: flex-end;
+		}
+
+		.is-the-publication-publisher {
+			font-style: italic;
+		}
+		> :first-child {
+			margin-top: 0;
+		}
+	}
+}
+
+/* 
+*			NU EVENTS TEASER STYLES
+* 		UNDER DEVELOPMENT
+*/
+
+.nu_posts-grid .nu__grid {
+	.grid-item.nu_events {
+		// ? because the date-time block is not actually loaded we need to pull the styles in directly
+		.nu__datetime {
+			@include nu__date_time_block_styles();
+		}
+
+		p.post-title {
+			margin: $base-margin 0 $half-margin 0;
+		}
+
+		> a.contains-clickable-area {
+			padding: 0;
+			@include nu_micon("\e5cc", after);
+			&:after {
+				position: absolute;
+				bottom: $half-margin;
+				right: $half-margin;
+				line-height: 1;
+			}
+
+			&:hover,
+			&:focus {
+				&:after {
+					color: var(--wp--preset--color--red-3);
+				}
+			}
+		}
+
+		// ? we are using post type as a placeholder for a "single select term"; need to convert a taxonomy to a radio select or something
+		// ? in the future, this will be a "single term" or a grouping of terms --- TBD
+		.is-post-type-label {
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			margin: $half-margin 0;
+			&:before {
+				content: "";
+				display: inline-block;
+				border: 1px solid var(--wp--preset--color--black-1);
+				border-radius: 50%;
+				width: 8px;
+				height: 8px;
+				margin: 0 $base-margin 0 0;
+			}
+		}
+	}
+}
+
+li.grid-item.broken {
+	&:only-child {
+		flex: 1 0 100% !important;
+		width: 100% !important;
+		p {
+			text-align: center;
+			padding: $base-margin;
+			font-style: italic;
+		}
+	}
+}
