--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
@@ -19,21 +19,34 @@ body {
 	}
 }
 
+@mixin the_top_level_blocks_container() {
+
+	// ? most blocks pad from the edge by base margin
+	> :not(.alignfull, .is-reusable) {
+		padding: 0 $base-margin;
+	}
+	// ? most blocks (as sections) vertical spacing is $margin_8x except typographical elements like paragraphs
+	> :not(p, .wp-block-paragraph, .wp-block-spacer) {
+		margin: $margin_8x auto 0 auto;
+	}
+}
+
 @mixin is_page_level_blocks_wrapper() {
 	> * {
 		// ? top level blocks margin
 		margin: $margin_8x auto 0 auto;
 
 		// ? top level blocks widths
-		// max-width: 80%;
+		max-width: 80%;
 		&.alignwide {
-			// max-width: 90%;
+			max-width: 90%;
 		}
 		&.alignfull,
 		&.is-reusable {
-			// max-width: 100%;
+			max-width: 100%;
 		}
 	}
+
 	> p,
 	> .wp-block-paragraph {
 		margin-top: $margin_4x;
@@ -70,14 +83,14 @@ body {
 	}
 }
 
-
 // ? using a group as a wrapper for top-level "sections" blows out the vertical rhythm
 // ? css expects the hero to come first - maybe in a group wrapper - and not count
 .blocks--wrapper > .wp-block-group.alignfull:not(:first-child),
 .block-editor-block-list__layout.is-root-container,
 .blocks--wrapper {
 	//
-	@include is_page_level_blocks_wrapper();
+	// @include is_page_level_blocks_wrapper();
+	@include the_top_level_blocks_container();
 
 	//
 	//
