--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
@@ -1,2 +1,4 @@
 @import '../library';
 @import './landing-pages/landing-page-has-sidebar';
+@import './heroes/shared-people-hero';
+@import './content-types/people-related-patterns';
