--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/person-info.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/person-info.scss
@@ -12,30 +12,34 @@ Person Info Stylesheet
         display: flex;
         flex-flow: column nowrap;
         align-items: flex-start;
+    }
+
+    // margin-bottom: 0; 
+    h2, h3, p {
+        margin: $base-margin 0 0; 
+        font-weight: 300; 
         color: var(--wp--preset--color--black-2); 
     }
 
+    h2 {
+        font-size: var(--wp--preset--font-size--30-36);
+    }
+
+    h3 {
+        font-size: var(--wp--preset--font-size--20-28);
+    }
+
     p {
-        margin-bottom: 0; 
+        font-weight: 400; 
         .material-icons-outlined {
             font-size: 20px; 
             line-height: 20px; 
             margin-top: -4px; 
         }
-        // 
-        &:where(.full-name) {
-            font-size: var(--wp--preset--font-size--30-36);
-            
-        }
-        // 
-        &:where(.primary-title) {
-            font-size: var(--wp--preset--font-size--20-28);
-        }
-        // 
         &:where(.email, .phone-number) {
             font-size: var(--wp--preset--font-size--14-20);
-            padding: $half-margin; 
-            border-radius: 2px; 
+            padding: $half-margin $base-margin; 
+            border-radius: 5px; 
             @extend %transition; 
 
             span {
@@ -55,17 +59,23 @@ Person Info Stylesheet
             }
 
             &:hover, &:focus {
+                background-color: var(--wp--preset--color--white-2);
+                color: var(--wp--preset--color--black-1); 
                 .icon-content-copy {
                     opacity: 1; 
                 }
             }
             
         }
-        // ? email has content copy icon, phone number does not at this time
-        &:where(.email) {
-            &:hover, &:focus {
-                background-color: var(--wp--preset--color--white-2);
-            }
-        }
+        // // ? email has content copy icon, phone number does not at this time
+        // &:where(.email) {
+        //     &:hover, &:focus {
+        //         background-color: var(--wp--preset--color--white-2);
+        //     }
+        // }
+    }
+
+    a {
+        border-bottom: none !important; 
     }
 }
